Moving on up-date

--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,14 +1,12 @@
 # INTRODUCTION {#ref-intro}
 
-Sustainable management of marine fisheries has been recognized as a critical challenge facing society in the 21^st^ century [@cbdAichiBiodiversityTargets2018]. The challenges facing sustainable fisheries management are multifaceted and include complex socio-economic, political, and scientific interactions (CITE). These challenges are compound because fisheries management regions were often delineated as a result of political or geographic considerations rather than biological or ecological rationale. As a result, the management region can vary from situations in which it encompasses only a small subset of the total population of a species, to situations in which the majority of the stock is manged across a region with significant heterogeneity in the processes that drive the population dynamics. (CITE).
+Sustainable management of marine fisheries has been recognized as a critical challenge facing society in the 21^st^ century [@cbdAichiBiodiversityTargets2018]. The challenges facing sustainable fisheries management are multifaceted and include interactions between complex ecological, socio-economic, and political factors (CITE). For example, fisheries management regions were often delineated as a result of political or geographic considerations rather than biological or ecological rationale. As a result, the management region can vary from situations in which it encompasses only a small subset of the total population of a species, to situations in which the majority of the stock is manged across a region with significant heterogeneity in the processes that drive the population dynamics. (CITE).
 
-One of the long-standing challenges in fisheries science has been to account for both the spatial and temporal heterogeneity in the processes that drive a stocks population dynamics [@bevertonDynamicsExploitedFish1957; @hilbornQuantitativeFisheriesStock1992]. From the early days of fisheries science it was recognized that an inability to fully account for spatial processes was potentially a serious issues  [@rickerFurtherNotesFishing1944; @bevertonDynamicsExploitedFish1957]. Many of the traditional fisheries methods developed, and still currently used to assess fisheries, require assumptions about the underlying spatial processes; during the development of these methods these assumptions were often identified as potentially problematic [@bevertonDynamicsExploitedFish1957; @rickerComputationInterpretationBiological1975; @hilbornQuantitativeFisheriesStock1992]. While data collection in fisheries science, both biological and environmental, is often spatial and temporal in nature, computational and statistical limitations have resulted in science products that do not fully utilize the spatio-temporal information contained in these data. 
+Accounting for spatial and temporal heterogeneity in the processes that drive a stocks population dynamics has long been recognized as a challenge in fisheries science [@bevertonDynamicsExploitedFish1957; @hilbornQuantitativeFisheriesStock1992,@rickerFurtherNotesFishing1944]. Many of the traditional fisheries methods developed, and still currently used to assess fisheries, require assumptions about the underlying spatial processes, these assumptions generally result in models that treat stocks as spatially homogeneous entities. [@bevertonDynamicsExploitedFish1957; @rickerComputationInterpretationBiological1975; @hilbornQuantitativeFisheriesStock1992]. Many of these assumptions were required because of computational and statistical limitations and has lead to science products that do not fully utilize the spatio-temporal information contained in the underlying data. Techniques, such as survey stratification, have been utilized in an effort to account for spatial heterogeneity and reduce uncertainty in the indices feeding these models [CITE]. Other methods have been developed to quantify changes in spatial patterns over time  (CITE Gini, D50, etc). These methods generally measure how evenly a population is distributed across some domain with data that is aggregated at some scale (often at the scale of the strata). These indices are an additional source of information providing a synoptic view of whether the distribution of parameters of interest (e.g. survey abundance or biomass) has changed over time, but they are unable to provide a detailed understanding of the spatial changes in these distributions. 
 
-In fisheries stock assessment, the traditional assessment methods aggregate information spatially and treat stocks as spatially homogeneous entities [@hilbornQuantitativeFisheriesStock1992]. To deal with changes in spatial patterns over time various indices have been developed that provide a measure of temporal changes in spatial distributions of abundance or biomass (CITE!!! Gini, D50, etc). These indices generally measure how evenly a population is distributed across some domain with data that is aggregated at some scale (often at the scale of the strata). While these indices provide a synoptic view of how the distribution of abundance or biomass has changed over time, they are unable to provide a detailed understanding of the spatial changes in these distributions. 
+Species distribution models (SDMs) were one of the earliest modelling frameworks developed to better understand spatial distributions and the processes that influence the observed patterns in species distributions [@grinnellOriginDistributionChestNutBacked1904; @boxPredictingPhysiognomicVegetation1981; @boothBioclimFirstSpecies2014]. These models use environmental data and species ecological information to map the occurrence probability (OP; or some measure of abundance) of a species across some land(sea)-scape; quantitative SDMs originated with attempts to predict terrestrial plant distributions [@boxPredictingPhysiognomicVegetation1981]. In the marine realm, the use of SDMs has increased rapidly in recent years; SDMs have been used in the development of Marine Protect Areas (MPAs) and MPA networks, to better understand the distribution of Species at Risk (SAR), and to predict the impact of climate change [@cheungApplicationMacroecologicalTheory2008; @robinsonPushingLimitsMarine2011; @sundbladEcologicalCoherenceMarine2011; @domischSpatiallyExplicitSpecies2019; @mchenryProjectingMarineSpecies2019]. 
 
-Species distribution models (SDMs) were one of the earliest modelling frameworks developed to better understand spatial distributions and the processes that influence where a species is likely to be observed [@grinnellOriginDistributionChestNutBacked1904; @boxPredictingPhysiognomicVegetation1981; @boothBioclimFirstSpecies2014]. These models use environmental data and species ecological information to map the occurrence probability (OP; or some measure of abundance) of a species across some land(sea)-scape; quantitative SDMs originated with attempts to predict terrestrial plant distributions [@boxPredictingPhysiognomicVegetation1981]. In the marine realm, the use of SDMs has increased rapidly in recent years; SDMs have been used in the development of Marine Protect Areas (MPAs), MPA networks, to better understand the distribution of Species at Risk (SAR), and to predict the impact of climate change [@cheungApplicationMacroecologicalTheory2008; @robinsonPushingLimitsMarine2011; @sundbladEcologicalCoherenceMarine2011; @domischSpatiallyExplicitSpecies2019; @mchenryProjectingMarineSpecies2019]. 
-
-Historically, SDMs often did not explicitly consider temporal changes in the relationship between the environment and the response of the species; these SDMs therefore provide a snapshot in time based on available data [@elithSpeciesDistributionModels2009]. However, more sophisticated SDM frameworks have been developed in which the underlying relationships can vary in time and space while explicitly accounting for spatial patterns, which results in more dynamic models which can provide improved predictions and more completely utilize the information contained within these data [@merowDevelopingDynamicMechanistic2011; @thorsonJointDynamicSpecies2016; @martinez-minayaSpeciesDistributionModeling2018]. The development of these new spatio-temporal SDM models have been made possible by a number of recent statistical and computational advances such as the implementation of the Laplace approximation (LA), Automatic Differentiation (AD), Stochastic Partial Differential Equations (SPDE), and Gaussian Markov Random Fields (GMRF) in commonly used programming languages [@kristensenTMBAutomaticDifferentiation2016; @rueBayesianComputingINLA2016; @thorsonGuidanceDecisionsUsing2019]. This has enabled the complex spatio-temporal analytical problems required for these advanced SDM models to be solved in a fraction of the time required by traditional methods.
+Historically, SDMs often did not explicitly consider temporal changes in the relationship between the environment and the response of the species; these SDMs therefore provide a snapshot in time based on available data [@elithSpeciesDistributionModels2009]. However, more sophisticated SDM frameworks have been developed in which the underlying relationships can vary in time and space, this has lead to more dynamic models which can provide improved predictions and more completely utilize the information contained within these data [@merowDevelopingDynamicMechanistic2011; @thorsonJointDynamicSpecies2016; @martinez-minayaSpeciesDistributionModeling2018]. The development of these new spatio-temporal SDM models have been made possible by a number of recent statistical and computational advances such as the implementation of the Laplace approximation (LA), Automatic Differentiation (AD), Stochastic Partial Differential Equations (SPDE), and Gaussian Markov Random Fields (GMRFs) in commonly used programming languages [@kristensenTMBAutomaticDifferentiation2016; @rueBayesianComputingINLA2016; @thorsonGuidanceDecisionsUsing2019]. This has enabled the complex spatio-temporal analytical problems associated with these advanced SDM models to be solved in a fraction of the time required by traditional methods.
 
 **So we could have short intro and jump right to the objectives here and put at least some of this in the methods and/or discussion?**
 
