--- a/analyses-code.Rmd
+++ b/analyses-code.Rmd
@@ -181,7 +181,7 @@ save_plot(paste0(direct.proj,"Results/Figures/Diagnostics_single_fe_waic.png"),p
 #####
 # First I think we need to discuss the model selection and show some of those plots
 # Possible plots here include these, I suspect a few of these might be supplements or I do like pointing folks to my
-#plt.waic.10 
+plt.waic.10 <- plt.waic.10 +  theme_few(base_size = 12)
 # Github repo where you can run the shiny app and look at the output rather than a big boring appendix.
 save_plot(paste0(direct.proj,"Results/Figures/Diagnostics_2_covars_fe_waic.tiff"),plt.waic.10,base_width =16,base_height =8,units='in')
 save_plot(paste0(direct.proj,"Results/Figures/Diagnostics_2_covars_fe_waic.png"),plt.waic.10,base_width =16,base_height =8,units='in')
@@ -533,8 +533,8 @@ plt.cog <-  bp.zoom + geom_label(data = cog.n.area,aes(x=x, y = y,label=substr(y
                   xlab("") + ylab("") + theme(panel.border = element_rect(colour = "black", fill=NA, size=1))
 
 
-save_plot(paste0(direct.proj,"Results/Figures/center_of_gravity.tiff"),plt.cog,base_width =12,base_height =12,units='in')
-save_plot(paste0(direct.proj,"Results/Figures/center_of_gravity.png"),plt.cog,base_width =12,base_height =12,units='in')
+save_plot(paste0(direct.proj,"Results/Figures/center_of_gravity.tiff"),plt.cog,base_width =8,base_height =8,units='in')
+save_plot(paste0(direct.proj,"Results/Figures/center_of_gravity.png"),plt.cog,base_width =8,base_height =8,units='in')
 ```
 
 ```{r area-plot, echo=F, include=F, paged.print=FALSE,cache =T}
@@ -693,7 +693,7 @@ gini.surveys$species[gini.surveys$species == "Atlantic Cod"] <- "Cod"
 # Now the two figures, I don't think we need this first one for the paper, but is handy I think...
 plt.gini.cum.prop <- ggplot(gini.surveys) + geom_line(aes(x = cum.p.area, y = cum.pbm, color = year,group = year)) + facet_wrap(~species+survey) + 
   geom_abline(slope=1,intercept =0) + xlim(c(0,1)) + ylim(c(0,1)) + 
-  ylab("Cumlative Proportion of Biomass") + xlab("Cumulative Area")  + scale_color_viridis_c(option = "A")
+  ylab("Cumlative Proportion of Biomass") + xlab("Cumulative Area")  + scale_color_viridis_c(option = "A")+  theme_few(base_size = 12)
 
 save_plot(paste0(direct.proj,"Results/Figures/Gini_cum_prop_figures.tiff"),plt.gini.cum.prop,base_width =12,base_height =12,units='in')
 save_plot(paste0(direct.proj,"Results/Figures/Gini_cum_prop_figures.png"),plt.gini.cum.prop,base_width =12,base_height =12,units='in')
@@ -701,97 +701,37 @@ gini.cum.prop.plt <- paste0(direct.proj,"Results/Figures/Gini_cum_prop_figures.p
 
 cols <- addalpha(c("forestgreen", "black"),alpha=0.5) 
 plt.gini.index <- ggplot(gini.surveys) + geom_line(aes(x = year, y = Gini,color=species))  + theme(legend.title = element_blank()) +
-  facet_wrap(~survey) + ylim(c(0,1)) + xlab("") + ylab("Gini Index") + scale_color_manual(values = cols)
+  facet_wrap(~survey) + ylim(c(0,1)) + xlab("") + ylab("Gini Index") + scale_color_manual(values = cols) +  theme_few(base_size = 12)
 
 save_plot(paste0(direct.proj,"Results/Figures/Gini_index.tiff"),plt.gini.index,base_width =12,base_height =6,units='in')
 save_plot(paste0(direct.proj,"Results/Figures/Gini_index.png"),plt.gini.index,base_width =12,base_height =6,units='in')
 ```
 
-```{r inline-data-for-paper, echo=F, include=F, paged.print=FALSE,cache =F}
-
-################################
-###  Getting data for use in the paper  ###
-################################
-n.stations <- dat.final %>% group_by(survey) %>% summarise(ns = n())
-n.nmfs.spring <- n.stations$ns[n.stations$survey == 'nmfs-spring']
-n.rv <- n.stations$ns[n.stations$survey == 'RV']
-n.nmfs.fall <- n.stations$ns[n.stations$survey == 'nmfs-fall']
-
-# What size are the mesh grid cells
-mesh.grid.size <- st_area(mesh.grid) %>% set_units("km^2") %>% as.numeric() %>% mean() %>% round(digits=1)
-
-# Sediment type overall...
-sed.bd <- table(dat.final$SEDNUM)
-per.3.4.sed <- signif(100*sum(sed.bd[2:3])/length(dat.final$SEDNUM), digits = 2)
-# Other sediment types are 5.7% of tows, along with a small number of NA tows (which table doesn't show).
-per.other.sed <- signif(100*sum(sed.bd[-c(2:3)])/length(dat.final$SEDNUM), digits = 2)
-# Get some of the cod FE numbers... hard to pick a number here give variabilty but save to say looking at these the drop occurs between 10 and 11 °C
-wt.cod <- cod.fe.res %>% dplyr::filter(survey == "Winter" & fe == "SST") 
-st.cod <- cod.fe.res %>% dplyr::filter(survey == "Spring" & fe == "SST") 
-ft.cod <- cod.fe.res %>% dplyr::filter(survey == "Fall" & fe == "SST") 
-
-peaks <- aggregate(response ~ survey + fe,data = cod.fe.res, FUN = function(x) which(x == max(x)))
-wd.cod <- cod.fe.res %>% dplyr::filter(survey == "Winter" & fe == "Depth") 
-sd.cod <- cod.fe.res %>% dplyr::filter(survey == "Spring" & fe == "Depth") 
-s.dep.peak <- sd.cod$covar[peaks$response[2]]
-w.dep.peak <- wd.cod$covar[peaks$response[1]]
-c.dep.peak <- paste0(round(s.dep.peak,digits =0),"-",round(w.dep.peak,digits=0))
-
-# For yellowtail pick a peak depth as well
-peaks <- aggregate(response ~ survey + fe,data = yt.fe.res, FUN = function(x) which(x == max(x)))
-wd.yt <- yt.fe.res %>% dplyr::filter(survey == "Winter" & fe == "Depth") 
-sd.yt <- yt.fe.res %>% dplyr::filter(survey == "Spring" & fe == "Depth") 
-fd.yt <- yt.fe.res %>% dplyr::filter(survey == "Fall" & fe == "Depth") 
-s.dep.peak <- as.numeric(sd.yt$covar[peaks$response[2]])
-w.dep.peak <- as.numeric(wd.yt$covar[peaks$response[1]])
-f.dep.peak <- as.numeric(fd.yt$covar[peaks$response[3]])
-# Spring and winter are the deepest so take those..
-yt.dep.peak <- paste0(round(s.dep.peak,digits =0),"-",round(w.dep.peak,digits=0))
-
-# Hyperparamters
-range.winter.cod.est <- hyper.mod.est %>% dplyr::filter(model == "cod.winter" , hyper == "Range for w")
-range.winter.cod.mn <- signif(range.winter.cod.est$mean/1000,digits =3)
-range.winter.cod.lci <- signif(range.winter.cod.est$`0.025quant`/1000,digits =2)
-range.winter.cod.uci <- signif(range.winter.cod.est$`0.975quant`/1000,digits =3)
-range.winter.cod.mn.ci <- paste0(range.winter.cod.mn," (95% CI:",range.winter.cod.lci,"-",range.winter.cod.uci,")")
-
-range.spring.cod.est <- hyper.mod.est %>% dplyr::filter(model == "cod.spring" , hyper == "Range for w")
-range.spring.cod.mn <- signif(range.spring.cod.est$mean/1000,digits =3)
-range.spring.cod.lci <- signif(range.spring.cod.est$`0.025quant`/1000,digits =3)
-range.spring.cod.uci <- signif(range.spring.cod.est$`0.975quant`/1000,digits =3)
-range.spring.cod.mn.ci <- paste0(range.spring.cod.mn," (95% CI:",range.spring.cod.lci,"-",range.spring.cod.uci,")")
-
-range.winter.yt.est <- hyper.mod.est %>% dplyr::filter(model == "yt.winter" , hyper == "Range for w")
-range.winter.yt.mn <- signif(range.winter.yt.est$mean/1000,digits =2)
-range.winter.yt.lci <- signif(range.winter.yt.est$`0.025quant`/1000,digits =2)
-range.winter.yt.uci <- signif(range.winter.yt.est$`0.975quant`/1000,digits =3)
-range.winter.yt.mn.ci <- paste0(range.winter.yt.mn," (95% CI:",range.winter.yt.lci,"-",range.winter.yt.uci,")")
-
-```
-
-
 ```{r cod-random-field-code,t, echo=F, include=F,cache=T}
 # Now make the 6 random fields we want and carry on...
-rf.winter.cod <- rand.field.pred$`cod_PA RV_survey`
-rf.spring.cod <- rand.field.pred$`cod_PA nmfs-spring_survey`
-rf.fall.cod <- rand.field.pred$`cod_PA nmfs-fall_survey`
+rf.winter.cod <- rand.fields.3.5$`cod_PA RV survey model.depth.sst_st_5`
+# The eras in here are wrong, need to make them match dat.winter
+rf.winter.cod$era <- rf.winter.cod$era+4
+rf.spring.cod <- rand.fields.3.5$`cod_PA nmfs-spring survey model.depth.sst_st_5`
+rf.fall.cod <- rand.fields.3.5$`cod_PA nmfs-fall survey model.depth.sst_st_5`
 
 
-eras <- factor.2.number(unique(pred.output.pred$`cod_PA RV_survey`$years_5))
+eras <- unique(rf.winter.cod$era)
 n.eras <- length(eras)
 mesh.tmp <- st_sf(rep(st_sf(mesh.sf$vertices)$geometry,n.eras), crs = st_crs(mesh.grid))
-mesh.tmp$ID <- rf.winter.cod$ID
+mesh.tmp$ID <- rf.winter.cod$ID <- seq(1:nrow(rf.winter.cod))
 rf.winter.cod <- merge(mesh.tmp,rf.winter.cod, by = "ID")
-rf.winter.cod$era <- NA
+
+#rf.winter.cod$era <- NA
 
 # This should work it's a bit of a ugly cheat, but is quick...
-nrows <- nrow(mesh.sf$vertices)
-for(i in 1:n.eras)
-{
-  count1 <- (i-1)*nrows+1
-  count2 <- (i)*nrows
-  rf.winter.cod$era[count1:count2] <- eras[i]
-}
+# nrows <- nrow(mesh.sf$vertices)
+# for(i in 1:n.eras)
+# {
+#   count1 <- (i-1)*nrows+1
+#   count2 <- (i)*nrows
+#   rf.winter.cod$era[count1:count2] <- eras[i]
+# }
 
 # Set the color universally for all these figures
 col <- addalpha(pals::viridis(101),1)
@@ -832,13 +772,13 @@ for(n in min(eras):max(eras))
 rf.winter.cod <- st_intersection(rf.winter.cod,clp.pred)
 
 # Facet version of the above NOTE HOW THE YEARS ARE F'd up now...
-plt.rf.winter.cod <- bp + geom_sf(data = rf.winter.cod  ,aes(fill = mean,colour=mean))+
+plt.rf.winter.cod <- bp + geom_sf(data = rf.winter.cod  ,aes(fill = r.field.link,colour=r.field.link))+
 facet_wrap(~yrs,ncol=6) +
   coord_sf(datum=32619) + sf + sc  +# theme_map() +
  theme(legend.key.width =hgt,text = element_text(size=16), legend.position="top")
 #plt.rf.winter.cod
 
-plt.rf.winter.cod.sd <- bp + geom_sf(data = rf.winter.cod  ,aes(fill = sd,colour=sd))+
+plt.rf.winter.cod.sd <- bp + geom_sf(data = rf.winter.cod  ,aes(fill = r.field.sd,colour=r.field.sd))+
 facet_wrap(~yrs,ncol=6) +
   coord_sf(datum=32619) + sf.sd + sc.sd  +# theme_map() +
  theme(legend.key.width =hgt,text = element_text(size=16), legend.position="top")
@@ -846,21 +786,11 @@ facet_wrap(~yrs,ncol=6) +
 
 # Now do this for cod in the spring.
 
-eras <- factor.2.number(unique(pred.output.pred$`cod_PA nmfs-spring_survey`$years_5))
+eras <- unique(rf.spring.cod$era)
 n.eras <- length(eras)
 mesh.tmp <- st_sf(rep(st_sf(mesh.sf$vertices)$geometry,n.eras), crs = st_crs(mesh.grid))
-mesh.tmp$ID <- rf.spring.cod$ID
+mesh.tmp$ID <- rf.spring.cod$ID <- seq(1:nrow(rf.spring.cod))
 rf.spring.cod <- merge(mesh.tmp,rf.spring.cod, by = "ID")
-rf.spring.cod$era <- NA
-
-# This should work it's a bit of a ugly cheat, but is quick...
-nrows <- nrow(mesh.sf$vertices)
-for(i in 1:n.eras)
-{
-  count1 <- (i-1)*nrows+1
-  count2 <- (i)*nrows
-  rf.spring.cod$era[count1:count2] <- eras[i]
-}
 
 for(n in min(eras):max(eras))
 {
@@ -877,13 +807,13 @@ rf.spring.cod <- st_intersection(rf.spring.cod,clp.pred)
 
 
 # Facet version of the above NOTE HOW THE YEARS ARE F'd up now...
-plt.rf.spring.cod <- bp + geom_sf(data = rf.spring.cod  ,aes(fill = mean,colour=mean))+
+plt.rf.spring.cod <- bp + geom_sf(data = rf.spring.cod  ,aes(fill = r.field.link,colour=r.field.link))+
 facet_wrap(~yrs,ncol=5) +
   coord_sf(datum=32619) + sf + sc  +# theme_map() +
  theme(legend.key.width =hgt,text = element_text(size=16), legend.position="top")
 #plt.rf.winter.cod
 
-plt.rf.spring.cod.sd <- bp + geom_sf(data = rf.spring.cod  ,aes(fill = sd,colour=sd))+
+plt.rf.spring.cod.sd <- bp + geom_sf(data = rf.spring.cod  ,aes(fill = r.field.sd,colour=r.field.sd))+
 facet_wrap(~yrs,ncol=5) +
   coord_sf(datum=32619) + sf.sd + sc.sd  +# theme_map() +
  theme(legend.key.width =hgt,text = element_text(size=16), legend.position="top")
@@ -891,21 +821,12 @@ facet_wrap(~yrs,ncol=5) +
 
 
 # Now do this for cod in the fall
-eras <- factor.2.number(unique(pred.output.pred$`cod_PA nmfs-fall_survey`$years_5))
+eras <- unique(rf.fall.cod$era)
 n.eras <- length(eras)
 mesh.tmp <- st_sf(rep(st_sf(mesh.sf$vertices)$geometry,n.eras), crs = st_crs(mesh.grid))
-mesh.tmp$ID <- rf.fall.cod$ID
+mesh.tmp$ID <- rf.fall.cod$ID  <- seq(1:nrow(rf.fall.cod))
 rf.fall.cod <- merge(mesh.tmp,rf.fall.cod, by = "ID")
-rf.fall.cod$era <- NA
 
-# This should work it's a bit of a ugly cheat, but is quick...
-nrows <- nrow(mesh.sf$vertices)
-for(i in 1:n.eras)
-{
-  count1 <- (i-1)*nrows+1
-  count2 <- (i)*nrows
-  rf.fall.cod$era[count1:count2] <- eras[i]
-}
 for(n in min(eras):max(eras))
 {
   yrs <- paste0(substr(dat.fall %>% dplyr::filter(years_5 == n) %>%
@@ -921,13 +842,13 @@ rf.fall.cod <- st_intersection(rf.fall.cod,clp.pred)
 
 
 # Facet version of the above NOTE HOW THE YEARS ARE F'd up now...
-plt.rf.fall.cod <- bp + geom_sf(data = rf.fall.cod  ,aes(fill = mean,colour=mean))+
+plt.rf.fall.cod <- bp + geom_sf(data = rf.fall.cod  ,aes(fill = r.field.link,colour=r.field.link))+
 facet_wrap(~yrs,ncol=5) +
   coord_sf(datum=32619) + sf + sc  +# theme_map() +
  theme(legend.key.width =hgt,text = element_text(size=16), legend.position="top")
 #plt.rf.winter.cod
 
-plt.rf.fall.cod.sd <- bp + geom_sf(data = rf.fall.cod  ,aes(fill = mean,colour=mean))+
+plt.rf.fall.cod.sd <- bp + geom_sf(data = rf.fall.cod  ,aes(fill = r.field.sd,colour=r.field.sd))+
   facet_wrap(~yrs,ncol=5) +
   coord_sf(datum=32619) + sf.sd + sc.sd  +# theme_map() +
  theme(legend.key.width =hgt,text = element_text(size=16), legend.position="top")
@@ -955,26 +876,17 @@ save_plot(paste0(direct.proj,"Results/Figures/rf_fall_cod_sd.tiff"),plt.rf.fall.
 
 ```{r yt-random-field-code,t, echo=F, include=F,cache=T}
 # get the approprite random fields
-rf.winter.yt <- rand.field.pred$`yt_PA RV_survey`
-rf.spring.yt <- rand.field.pred$`yt_PA nmfs-spring_survey`
-rf.fall.yt <- rand.field.pred$`yt_PA nmfs-fall_survey`
+rf.winter.yt <- rand.fields.3.5$`yt_PA RV survey model.depth.sed.sst_st_3`
+rf.winter.yt$era <- rf.winter.yt$era + 6 # The era in the random field needs updated to match years_3...
+rf.spring.yt <- rand.fields.3.5$`yt_PA nmfs-spring survey model.depth.sed.sst_st_3`
+rf.fall.yt <-   rand.fields.3.5$`yt_PA nmfs-fall survey model.depth.sed.sst_st_5`
 
 
-eras <- factor.2.number(unique(pred.output.pred$`yt_PA RV_survey`$years_3))
+eras <- unique(rf.winter.yt$era)
 n.eras <- length(eras)
 mesh.tmp <- st_sf(rep(st_sf(mesh.sf$vertices)$geometry,n.eras), crs = st_crs(mesh.grid))
-mesh.tmp$ID <- rf.winter.yt$ID
+mesh.tmp$ID <- rf.winter.yt$ID <- 1:nrow(rf.winter.yt)
 rf.winter.yt <- merge(mesh.tmp,rf.winter.yt, by = "ID")
-rf.winter.yt$era <- NA
-
-# This should work it's a bit of a ugly cheat, but is quick...
-nrows <- nrow(mesh.sf$vertices)
-for(i in 1:n.eras)
-{
-  count1 <- (i-1)*nrows+1
-  count2 <- (i)*nrows
-  rf.winter.yt$era[count1:count2] <- eras[i]
-}
 
 # Set the colors universally for all these figures
 col <- addalpha(pals::viridis(101),1)
@@ -992,7 +904,6 @@ if(length(brk.sd) > 12) hgt.sd <- unit(5,'cm')
 
 lims <- range(brk)
 lims.sd <- range(brk.sd)
-
 
 sf <- scale_fill_gradientn(colours = col, limits=lims,breaks=brk,name=paste0(en2fr("Random Field",french,case='sentence',custom = rosetta_terms)))
 sc <- scale_colour_gradientn(colours = col, limits=lims,breaks=brk,name=paste0(en2fr("Random Field",french,case='sentence',custom = rosetta_terms)))
@@ -1019,13 +930,13 @@ rf.winter.yt <- st_intersection(rf.winter.yt,clp.pred)
 
 
 # Facet version of the above NOTE HOW THE YEARS ARE F'd up now...
-plt.rf.winter.yt <- bp + geom_sf(data = rf.winter.yt  ,aes(fill = mean,colour=mean))+
+plt.rf.winter.yt <- bp + geom_sf(data = rf.winter.yt  ,aes(fill = r.field.link,colour=r.field.link))+
   facet_wrap(~yrs,ncol=5) +
   coord_sf(datum=32619) + sf + sc  +# theme_map() +
  theme(legend.key.width =hgt,text = element_text(size=16), legend.position="top")
 #plt.rf.winter.yt
 
-plt.rf.winter.yt.sd <- bp + geom_sf(data = rf.winter.yt  ,aes(fill = sd,colour=sd))+
+plt.rf.winter.yt.sd <- bp + geom_sf(data = rf.winter.yt  ,aes(fill = r.field.sd,colour=r.field.sd))+
   facet_wrap(~yrs,ncol=5) +
   coord_sf(datum=32619) + sf.sd + sc.sd  +# theme_map1 +
  theme(legend.key.width =hgt,text = element_text(size=16), legend.position="top")
@@ -1037,21 +948,11 @@ plt.rf.winter.yt.sd <- bp + geom_sf(data = rf.winter.yt  ,aes(fill = sd,colour=s
 # Now all this I want to be specific for each plot I think.
 
 
-eras <- factor.2.number(unique(pred.output.pred$`yt_PA nmfs-spring_survey`$years_3))
+eras <- unique(rf.spring.yt$era)
 n.eras <- length(eras)
 mesh.tmp <- st_sf(rep(st_sf(mesh.sf$vertices)$geometry,n.eras), crs = st_crs(mesh.grid))
-mesh.tmp$ID <- rf.spring.yt$ID
+mesh.tmp$ID <- rf.spring.yt$ID <- 1:nrow(rf.spring.yt)
 rf.spring.yt <- merge(mesh.tmp,rf.spring.yt, by = "ID")
-rf.spring.yt$era <- NA
-
-# This should work it's a bit of a ugly cheat, but is quick...
-nrows <- nrow(mesh.sf$vertices)
-for(i in 1:n.eras)
-{
-  count1 <- (i-1)*nrows+1
-  count2 <- (i)*nrows
-  rf.spring.yt$era[count1:count2] <- eras[i]
-}
 
 # So the yt spring plots will be...
 for(n in min(eras):max(eras))
@@ -1069,42 +970,24 @@ rf.spring.yt <- st_intersection(rf.spring.yt,clp.pred)
 
 
 # Facet version of the above NOTE HOW THE YEARS ARE F'd up now...
-plt.rf.spring.yt <- bp + geom_sf(data = rf.spring.yt  ,aes(fill = mean,colour=mean))+
-  facet_wrap(~yrs,ncol=6) +
+plt.rf.spring.yt <- bp + geom_sf(data = rf.spring.yt  ,aes(fill = r.field.link,colour=r.field.link))+
+  facet_wrap(~yrs,ncol=8) +
   coord_sf(datum=32619) + sf + sc  +# theme_map() +
  theme(legend.key.width =hgt,text = element_text(size=16), legend.position="top")
 #plt.rf.spring.yt
 
-plt.rf.spring.yt.sd <- bp + geom_sf(data = rf.spring.yt  ,aes(fill = sd,colour=sd))+
-  facet_wrap(~yrs,ncol=6) +
+plt.rf.spring.yt.sd <- bp + geom_sf(data = rf.spring.yt  ,aes(fill = r.field.sd,colour=r.field.sd))+
+  facet_wrap(~yrs,ncol=8) +
   coord_sf(datum=32619) + sf.sd + sc.sd  +# theme_map() +
  theme(legend.key.width =hgt,text = element_text(size=16), legend.position="top")
 #plt.rf.spring.yt.sd
 
-###### Now Fall Yellowtail
-
-
-eras <- factor.2.number(unique(pred.output.pred$`yt_PA nmfs-fall_survey`$years_5))
+###### Now Fall Yellowtail, note the 5 year random field is the best in show here...
+eras <- unique(rf.fall.yt$era)
 n.eras <- length(eras)
 mesh.tmp <- st_sf(rep(st_sf(mesh.sf$vertices)$geometry,n.eras), crs = st_crs(mesh.grid))
-mesh.tmp$ID <- rf.fall.yt$ID
+mesh.tmp$ID <- rf.fall.yt$ID <- 1:nrow(rf.fall.yt)
 rf.fall.yt <- merge(mesh.tmp,rf.fall.yt, by = "ID")
-rf.fall.yt$era <- NA
-
-# This should work it's a bit of a ugly cheat, but is quick...
-nrows <- nrow(mesh.sf$vertices)
-for(i in 1:n.eras)
-{
-  count1 <- (i-1)*nrows+1
-  count2 <- (i)*nrows
-  rf.fall.yt$era[count1:count2] <- eras[i]
-} # end for(i in 1:n.eras)
-
-# Set the color universally for all these figures
-col <- addalpha(pals::viridis(101),1)
-col.sd <- addalpha(pals::magma(101),1) # Different color for the standard deviation figures
-
-# Now all this I want to be specific for each plot I think.
 
 # So the yt fall plots will be...
 
@@ -1122,14 +1005,14 @@ for(n in min(eras):max(eras))
 rf.fall.yt <- st_intersection(rf.fall.yt,clp.pred)
 
 # Facet version of the above NOTE HOW THE YEARS ARE F'd up now...
-plt.rf.fall.yt <- bp + geom_sf(data = rf.fall.yt  ,aes(fill = mean,colour=mean))+
-  facet_wrap(~yrs,ncol=6) +
+plt.rf.fall.yt <- bp + geom_sf(data = rf.fall.yt  ,aes(fill = r.field.link,colour=r.field.link))+
+  facet_wrap(~yrs,ncol=5) +
   coord_sf(datum=32619) + sf + sc  +# theme_map() +
  theme(legend.key.width =hgt,text = element_text(size=16), legend.position="top")
 #plt.rf.fall.yt
 
-plt.rf.fall.yt.sd <- bp + geom_sf(data = rf.fall.yt  ,aes(fill = sd,colour=sd))+
-  facet_wrap(~yrs,ncol=6) +
+plt.rf.fall.yt.sd <- bp + geom_sf(data = rf.fall.yt  ,aes(fill = r.field.sd,colour=r.field.sd))+
+  facet_wrap(~yrs,ncol=5) +
   coord_sf(datum=32619) + sf.sd + sc.sd  +# theme_map() +
  theme(legend.key.width =hgt,text = element_text(size=16), legend.position="top")
 #plt.rf.fall.yt.sd
@@ -1344,12 +1227,12 @@ pf.winter.yt <- pf.winter.yt %>% dplyr::filter(!is.na(years_3))
 
 # Facet version of the above NOTE HOW THE YEARS ARE F'd up now...
 plt.pf.winter.yt <- bp + geom_sf(data = pf.winter.yt  ,aes(fill = pred,colour=pred))+
-facet_wrap(~yrs,ncol=6) +
+facet_wrap(~yrs,ncol=5) +
   coord_sf(datum=32619) + sf + sc  +# theme_map() +
  theme(legend.key.width =hgt,text = element_text(size=16), legend.position="top") 
 #plt.rf.winter.yt
 plt.pf.winter.yt.sd <- bp + geom_sf(data = pf.winter.yt  ,aes(fill = pred.sd,colour=pred.sd))+
-  facet_wrap(~yrs,ncol=6) +
+  facet_wrap(~yrs,ncol=5) +
   coord_sf(datum=32619) + sf.sd + sc.sd  +# theme_map1 +
  theme(legend.key.width =hgt,text = element_text(size=16), legend.position="top") 
 
@@ -1375,12 +1258,12 @@ pf.spring.yt <- pf.spring.yt %>% dplyr::filter(!is.na(years_3))
 
 # Facet version of the above NOTE HOW THE YEARS ARE F'd up now...
 plt.pf.spring.yt <- bp + geom_sf(data = pf.spring.yt  ,aes(fill = pred,colour=pred))+
-facet_wrap(~yrs,ncol=5) +
+facet_wrap(~yrs,ncol=8) +
   coord_sf(datum=32619) + sf + sc  +# theme_map() +
  theme(legend.key.width =hgt,text = element_text(size=16), legend.position="top") 
 #plt.rf.spring.yt
 plt.pf.spring.yt.sd <- bp + geom_sf(data = pf.spring.yt  ,aes(fill = pred.sd,colour=pred.sd))+
-  facet_wrap(~yrs,ncol=5) +
+  facet_wrap(~yrs,ncol=8) +
   coord_sf(datum=32619) + sf.sd + sc.sd  +# theme_map1 +
  theme(legend.key.width =hgt,text = element_text(size=16), legend.position="top") 
 
@@ -1436,9 +1319,157 @@ save_plot(paste0(direct.proj,"Results/Figures/pf_fall_yt_sd.tiff"),plt.pf.fall.y
 
 ```
 
+```{r hyperparameters, echo=F, include=F, paged.print=FALSE,cache=T}
+
+# Plotting the variance.
+plt.dep.var.est <- ggplot(hyper.mod.est %>% dplyr::filter(hyper == "Precision for depth")) + 
+                         geom_point(aes(x = survey ,y=sqrt(1/mean))) + 
+                         facet_wrap(~species) +
+                         geom_errorbar(aes(x = survey,ymin=sqrt(1/`0.025quant`),ymax = sqrt(1/`0.975quant`)),width=0) +
+                         xlab("") + ylab("\u03C3² (Dep)")
+
+plt.sst.var.est <- ggplot(hyper.mod.est %>% dplyr::filter(hyper == "Precision for sst")) + 
+                          geom_point(aes(x = survey ,y=sqrt(1/mean))) + 
+                          facet_wrap(~species) +
+                          geom_errorbar(aes(x = survey,ymin=sqrt(1/`0.025quant`),ymax = sqrt(1/`0.975quant`)),width=0) +
+                          xlab("") + ylab("\u03C3² (SST)")
+
+plt.range.field.est <- ggplot(hyper.mod.est %>% dplyr::filter(hyper == "Range for w")) + 
+                          geom_point(aes(x = survey ,y=mean/1000)) + 
+                          facet_wrap(~species) +
+                          geom_errorbar(aes(x = survey,ymin=`0.025quant`/1000,ymax = `0.975quant`/1000),width=0) +
+                          xlab("") + ylab("Range of Field (km)")
+
+plt.sd.field.est <- ggplot(hyper.mod.est %>% dplyr::filter(hyper == "Stdev for w")) + 
+                          geom_point(aes(x = survey ,y=mean)) + 
+                          facet_wrap(~species) +
+                          geom_errorbar(aes(x = survey,ymin=`0.025quant`,ymax = `0.975quant`),width=0) +
+                          xlab("") + ylab("\u03C3 of Field")
+# Now for the marginals
+plt.yt.winter.marginal <- ggplot(hyper.mod.post %>% dplyr::filter(model == 'yt.winter')) + 
+                                geom_line(aes(x = x ,y=y)) +
+                                facet_wrap(~hyper,scale='free') + 
+                                xlab("") + ylab("") +  
+                                theme(axis.text.y=element_blank(),axis.ticks.y=element_blank())
+
+plt.yt.spring.marginal <- ggplot(hyper.mod.post %>% dplyr::filter(model == 'yt.spring')) + 
+                                geom_line(aes(x = x ,y=y)) +
+                                facet_wrap(~hyper,scale='free') + 
+                                xlab("") + ylab("") +  
+                                theme(axis.text.y=element_blank(),axis.ticks.y=element_blank())
+
+plt.yt.fall.marginal <- ggplot(hyper.mod.post %>% dplyr::filter(model == 'yt.fall')) + 
+                                geom_line(aes(x = x ,y=y)) +
+                                facet_wrap(~hyper,scale='free') + 
+                                xlab("") + ylab("") +  
+                                theme(axis.text.y=element_blank(),axis.ticks.y=element_blank())
+
+plt.cod.winter.marginal <- ggplot(hyper.mod.post %>% dplyr::filter(model == 'cod.winter')) + 
+                                geom_line(aes(x = x ,y=y)) +
+                                facet_wrap(~hyper,scale='free') + 
+                                xlab("") + ylab("") +  
+                                theme(axis.text.y=element_blank(),axis.ticks.y=element_blank())
+
+plt.cod.spring.marginal <- ggplot(hyper.mod.post %>% dplyr::filter(model == 'cod.spring')) + 
+                                geom_line(aes(x = x ,y=y)) +
+                                facet_wrap(~hyper,scale='free') + 
+                                xlab("") + ylab("") +  
+                                theme(axis.text.y=element_blank(),axis.ticks.y=element_blank())
+
+plt.cod.fall.marginal <- ggplot(hyper.mod.post %>% dplyr::filter(model == 'cod.fall')) + 
+                                geom_line(aes(x = x ,y=y)) +
+                                facet_wrap(~hyper,scale='free') + 
+                                xlab("") + ylab("") +  
+                                theme(axis.text.y=element_blank(),axis.ticks.y=element_blank())
+
+# Now save all these bad boys...
+
+# The estimates for the hyperparameters
+save_plot(paste0(direct.proj,"Results/Figures/hyper_dep_var_est.png"),plt.dep.var.est,base_width =6,base_height =4,units='in',dpi=300)
+save_plot(paste0(direct.proj,"Results/Figures/hyper_dep_var_est.tiff"),plt.dep.var.est,base_width =6,base_height =4,units='in',dpi=300)
 
 
-```{r ,figs-load, echo=F, include=F, paged.print=FALSE,cache =F}
+save_plot(paste0(direct.proj,"Results/Figures/hyper_sst_var_est.png"),plt.sst.var.est,base_width =6,base_height =4,units='in',dpi=300)
+save_plot(paste0(direct.proj,"Results/Figures/hyper_sst_var_est.tiff"),plt.sst.var.est,base_width =6,base_height =4,units='in',dpi=300)
+
+
+save_plot(paste0(direct.proj,"Results/Figures/hyper_range_field_est.png"),plt.range.field.est,base_width =6,base_height =4,units='in',dpi=300)
+save_plot(paste0(direct.proj,"Results/Figures/hyper_range_field_est.tiff"),plt.range.field.est,base_width =6,base_height =4,units='in',dpi=300)
+
+save_plot(paste0(direct.proj,"Results/Figures/hyper_sd_field_est.png"),plt.sd.field.est,base_width =6,base_height =4,units='in',dpi=300)
+save_plot(paste0(direct.proj,"Results/Figures/hyper_sd_field_est.tiff"),plt.sd.field.est,base_width =6,base_height =4,units='in',dpi=300)
+
+
+# The cod marginals/posteriors
+save_plot(paste0(direct.proj,"Results/Figures/cod_winter_marginal.png"),plt.cod.winter.marginal,base_width =6,base_height =8,units='in',dpi=300)
+save_plot(paste0(direct.proj,"Results/Figures/cod_winter_marginal.tiff"),plt.cod.winter.marginal,base_width =6,base_height =8,units='in',dpi=300)
+
+save_plot(paste0(direct.proj,"Results/Figures/cod_spring_marginal.png"),plt.cod.spring.marginal,base_width =6,base_height =8,units='in',dpi=300)
+save_plot(paste0(direct.proj,"Results/Figures/cod_spring_marginal.tiff"),plt.cod.spring.marginal,base_width =6,base_height =8,units='in',dpi=300)
+
+save_plot(paste0(direct.proj,"Results/Figures/cod_fall_marginal.png"),plt.cod.fall.marginal,base_width =6,base_height =8,units='in',dpi=300)
+save_plot(paste0(direct.proj,"Results/Figures/cod_fall_marginal.tiff"),plt.cod.fall.marginal,base_width =6,base_height =8,units='in',dpi=300)
+
+# The yt marginals/posteriors
+save_plot(paste0(direct.proj,"Results/Figures/yt_winter_marginal.png"),plt.yt.winter.marginal,base_width =6,base_height =8,units='in',dpi=300)
+save_plot(paste0(direct.proj,"Results/Figures/yt_winter_marginal.tiff"),plt.yt.winter.marginal,base_width =6,base_height =8,units='in',dpi=300)
+
+save_plot(paste0(direct.proj,"Results/Figures/yt_spring_marginal.png"),plt.yt.spring.marginal,base_width =6,base_height =8,units='in',dpi=300)
+save_plot(paste0(direct.proj,"Results/Figures/yt_spring_marginal.tiff"),plt.yt.spring.marginal,base_width =6,base_height =8,units='in',dpi=300)
+
+save_plot(paste0(direct.proj,"Results/Figures/yt_fall_marginal.png"),plt.yt.fall.marginal,base_width =6,base_height =8,units='in',dpi=300)
+save_plot(paste0(direct.proj,"Results/Figures/yt_fall_marginal.tiff"),plt.yt.fall.marginal,base_width =6,base_height =8,units='in',dpi=300)
+
+
+```
+
+```{r PCA-plt, echo=F, include=F, paged.print=FALSE,cache=T}
+
+
+pca.12.winter <- ggbiplot(RV.pca.mod,alpha=0.05,varname.size = 4) + 
+                                    scale_y_continuous(limits=c(-3,3))+  scale_x_continuous(limits=c(-3,3)) +
+                                    ggtitle("WInter PC 1 and 2") + theme(plot.title = element_text(hjust = 0.5))
+pca.34.winter <- ggbiplot(RV.pca.mod,alpha=0.05,choices=c(3,4),varname.size = 4) + 
+                                    scale_y_continuous(limits=c(-3,3)) +  scale_x_continuous(limits=c(-3,3))+
+                                    ggtitle("Winter PC 3 and 4") + theme(plot.title = element_text(hjust = 0.5))
+
+pca.12.spring <- ggbiplot(nmfs.spr.pca.mod,alpha=0.05,varname.size = 4) +  
+                                    scale_y_continuous(limits=c(-3,3))+  scale_x_continuous(limits=c(-3,3)) +
+                                    ggtitle("Spring PC 1 and 2") + theme(plot.title = element_text(hjust = 0.5))
+
+pca.34.spring <- ggbiplot(nmfs.spr.pca.mod,alpha=0.05,choices=c(3,4),varname.size = 4) + 
+                                    scale_y_continuous(limits=c(-3,3))+  scale_x_continuous(limits=c(-3,3)) +
+                                    ggtitle("Spring PC 3 and 4") + theme(plot.title = element_text(hjust = 0.5))
+
+pca.12.fall <- ggbiplot(nmfs.fall.pca.mod,alpha=0.05,varname.size = 4) + 
+                                    scale_y_continuous(limits=c(-3,3))+  scale_x_continuous(limits=c(-3,3)) +                                  
+                                    ggtitle("Fall PC 1 and 2") + theme(plot.title = element_text(hjust = 0.5))
+
+pca.34.fall <- ggbiplot(nmfs.fall.pca.mod,alpha=0.05,choices=c(3,4),varname.size = 4)  + 
+                                    scale_y_continuous(limits=c(-3,3))+  scale_x_continuous(limits=c(-3,3)) +                                  
+                                    ggtitle("Fall PC 3 and 4") + theme(plot.title = element_text(hjust = 0.5))
+
+plt.pca <- plot_grid(pca.12.winter,pca.12.spring,pca.12.fall,pca.34.winter,pca.34.spring,pca.34.fall,nrow =2)
+
+save_plot(paste0(direct.proj,"Results/Figures/pca.png"),plt.pca,base_width =11,base_height =7,units='in',dpi=300)
+save_plot(paste0(direct.proj,"Results/Figures/pca.tiff"),plt.pca,base_width =11,base_height =7,units='in',dpi=300)
+
+```
+
+```{r mesh-grid-plt, echo=F, include=F, paged.print=FALSE,cache=T}
+####
+# Figure for the mesh grid
+#####
+plt.mesh.grid <- pecjector(area = list(x=c(540000,780000), y = c(4500000,4680000),crs = 32619),buffer=0.4, c_sys = 32619,plot=F,
+                     add_layer = list(land ='grey',eez = 'eez',nafo = 'main',scale.bar = 'tl',bathy = c(50,'s')),
+                     add_custom = list(obj = mesh.grid, size=0.5,color= 'grey30')) +
+                     theme_map()
+save_plot(paste0(direct.proj,"Results/Figures/mesh_grid.tiff"),plt.mesh.grid,base_width =8,base_height =8,units='in')
+save_plot(paste0(direct.proj,"Results/Figures/mesh.grid.png"),plt.mesh.grid,base_width =8,base_height =8,units='in')
+
+```
+
+```{r ,figs-load, echo=F, include=F, paged.print=FALSE,cache =T}
 # Here we load the figures we need for later, saves lots of running above if nothing has changed...
 over.plt <- paste0(direct.proj,"Results/Figures/GB_overview.png") # Overview plot
 mesh.plt <- paste0(direct.proj,"Results/Figures/mesh.png") # Mesh plot
@@ -1455,6 +1486,9 @@ area.can.vs.us.plt <- paste0(direct.proj,"Results/Figures/Area_can_vs_us_ts_high
 folds.plt <- paste0(direct.proj,"Results/Figures/cross_fold_validation.png") # Cross fold validation plot
 pred.17.19.plt <- paste0(direct.proj,"Results/Figures/prediction_2017_2019.png") # Predition and residula plot
 gini.index.plt <- paste0(direct.proj,"Results/Figures/Gini_index.png") # Gini index plot
+pca.plt <- paste0(direct.proj,"Results/Figures/pca.png") # PCA plot
+mesh.grid.plt <- paste0(direct.proj,"Results/Figures/mesh.grid.png")
+
 # Mean rf plots.
 rf.winter.cod.plt <- paste0(direct.proj,"Results/Figures/rf_winter_cod.png")
 rf.spring.cod.plt <- paste0(direct.proj,"Results/Figures/rf_spring_cod.png")
@@ -1483,4 +1517,78 @@ pf.fall.cod.sd.plt <- paste0(direct.proj,"Results/Figures/pf_fall_cod_sd.png")
 pf.winter.yt.sd.plt <- paste0(direct.proj,"Results/Figures/pf_winter_yt_sd.png")
 pf.spring.yt.sd.plt <- paste0(direct.proj,"Results/Figures/pf_spring_yt_sd.png")
 pf.fall.yt.sd.plt <- paste0(direct.proj,"Results/Figures/pf_fall_yt_sd.png")
+#Hyperparameters
+dep.var.est.plt <- paste0(direct.proj,"Results/Figures/hyper_dep_var_est.png")
+sst.var.est.plt <- paste0(direct.proj,"Results/Figures/hyper_sst_var_est.png")
+range.field.est.plt <- paste0(direct.proj,"Results/Figures/hyper_range_field_est.png")
+sd.field.est.plt <- paste0(direct.proj,"Results/Figures/hyper_sd_field_est.png")
+cod.fall.marginal.plt <- paste0(direct.proj,"Results/Figures/cod_fall_marginal.png")
+cod.winter.marginal.plt <- paste0(direct.proj,"Results/Figures/cod_winter_marginal.png")
+cod.spring.marginal.plt <- paste0(direct.proj,"Results/Figures/cod_spring_marginal.png")
+yt.winter.marginal.plt <- paste0(direct.proj,"Results/Figures/yt_winter_marginal.png")
+yt.spring.marginal.plt <- paste0(direct.proj,"Results/Figures/yt_spring_marginal.png")
+yt.fall.marginal.plt <- paste0(direct.proj,"Results/Figures/yt_fall_marginal.png")
+
+```
+
+```{r inline-data-for-paper, echo=F, include=F, paged.print=FALSE,cache =F}
+
+################################
+###  Getting data for use in the paper  ###
+################################
+n.stations <- dat.final %>% group_by(survey) %>% dplyr::summarise(ns = n())
+n.nmfs.spring <- n.stations$ns[n.stations$survey == 'nmfs-spring']
+n.rv <- n.stations$ns[n.stations$survey == 'RV']
+n.nmfs.fall <- n.stations$ns[n.stations$survey == 'nmfs-fall']
+
+# What size are the mesh grid cells
+mesh.grid.size <- st_area(mesh.grid) %>% set_units("km^2") %>% as.numeric() %>% mean() %>% round(digits=1)
+
+# Sediment type overall...
+sed.bd <- table(dat.final$SEDNUM)
+per.3.4.sed <- signif(100*sum(sed.bd[2:3])/length(dat.final$SEDNUM), digits = 2)
+# Other sediment types are 5.7% of tows, along with a small number of NA tows (which table doesn't show).
+per.other.sed <- signif(100*sum(sed.bd[-c(2:3)])/length(dat.final$SEDNUM), digits = 2)
+# Get some of the cod FE numbers... hard to pick a number here give variabilty but save to say looking at these the drop occurs between 10 and 11 °C
+wt.cod <- cod.fe.res %>% dplyr::filter(survey == "Winter" & fe == "SST") 
+st.cod <- cod.fe.res %>% dplyr::filter(survey == "Spring" & fe == "SST") 
+ft.cod <- cod.fe.res %>% dplyr::filter(survey == "Fall" & fe == "SST") 
+
+peaks <- aggregate(response ~ survey + fe,data = cod.fe.res, FUN = function(x) which(x == max(x)))
+wd.cod <- cod.fe.res %>% dplyr::filter(survey == "Winter" & fe == "Depth") 
+sd.cod <- cod.fe.res %>% dplyr::filter(survey == "Spring" & fe == "Depth") 
+s.dep.peak <- sd.cod$covar[peaks$response[2]]
+w.dep.peak <- wd.cod$covar[peaks$response[1]]
+c.dep.peak <- paste0(round(s.dep.peak,digits =0),"-",round(w.dep.peak,digits=0))
+
+# For yellowtail pick a peak depth as well
+peaks <- aggregate(response ~ survey + fe,data = yt.fe.res, FUN = function(x) which(x == max(x)))
+wd.yt <- yt.fe.res %>% dplyr::filter(survey == "Winter" & fe == "Depth") 
+sd.yt <- yt.fe.res %>% dplyr::filter(survey == "Spring" & fe == "Depth") 
+fd.yt <- yt.fe.res %>% dplyr::filter(survey == "Fall" & fe == "Depth") 
+s.dep.peak <- as.numeric(sd.yt$covar[peaks$response[2]])
+w.dep.peak <- as.numeric(wd.yt$covar[peaks$response[1]])
+f.dep.peak <- as.numeric(fd.yt$covar[peaks$response[3]])
+# Spring and winter are the deepest so take those..
+yt.dep.peak <- paste0(round(s.dep.peak,digits =0),"-",round(w.dep.peak,digits=0))
+
+# Hyperparamters
+range.winter.cod.est <- hyper.mod.est %>% dplyr::filter(model == "cod.winter" , hyper == "Range for w")
+range.winter.cod.mn <- signif(range.winter.cod.est$mean/1000,digits =3)
+range.winter.cod.lci <- signif(range.winter.cod.est$`0.025quant`/1000,digits =2)
+range.winter.cod.uci <- signif(range.winter.cod.est$`0.975quant`/1000,digits =3)
+range.winter.cod.mn.ci <- paste0(range.winter.cod.mn," (95% CI:",range.winter.cod.lci,"-",range.winter.cod.uci,")")
+
+range.spring.cod.est <- hyper.mod.est %>% dplyr::filter(model == "cod.spring" , hyper == "Range for w")
+range.spring.cod.mn <- signif(range.spring.cod.est$mean/1000,digits =3)
+range.spring.cod.lci <- signif(range.spring.cod.est$`0.025quant`/1000,digits =3)
+range.spring.cod.uci <- signif(range.spring.cod.est$`0.975quant`/1000,digits =3)
+range.spring.cod.mn.ci <- paste0(range.spring.cod.mn," (95% CI:",range.spring.cod.lci,"-",range.spring.cod.uci,")")
+
+range.winter.yt.est <- hyper.mod.est %>% dplyr::filter(model == "yt.winter" , hyper == "Range for w")
+range.winter.yt.mn <- signif(range.winter.yt.est$mean/1000,digits =2)
+range.winter.yt.lci <- signif(range.winter.yt.est$`0.025quant`/1000,digits =2)
+range.winter.yt.uci <- signif(range.winter.yt.est$`0.975quant`/1000,digits =3)
+range.winter.yt.mn.ci <- paste0(range.winter.yt.mn," (95% CI:",range.winter.yt.lci,"-",range.winter.yt.uci,")")
+
 ```
